--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.6.11",
     "eslint-config-prettier": "^10.1.8",
+    "framer-motion": "^12.23.22",
     "next": "15.5.4",
     "prettier": "^3.6.2",
     "react": "19.1.0",
@@ -17,7 +19,6 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4.1.14",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -25,7 +26,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.14",
+    "tailwindcss": "^3.4.18",
     "typescript": "^5"
   }
 }
