--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint-config-prettier": "^10.1.8",
     "framer-motion": "^12.23.22",
     "next": "15.5.4",
+    "next-themes": "^0.4.6",
     "prettier": "^3.6.2",
     "react": "19.1.0",
     "react-dom": "19.1.0"
