--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@iconify/react": "^6.0.2",
     "@nextui-org/react": "^2.6.11",
     "eslint-config-prettier": "^10.1.8",
     "framer-motion": "^12.23.22",
