refactor: move Next.js project to frontend/ directory for monorepo structure

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-audio-form-stock",
+  "name": "audio-form-stock-frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
