--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 
 # dependencies
 /node_modules
+/node_modules/
+frontend/node_modules/
+backend/node_modules/
 /.pnp
 .pnp.*
 .yarn/*
@@ -16,6 +19,8 @@
 # next.js
 /.next/
 /out/
+frontend/.next/
+frontend/out/
 
 # production
 /build
