--- a/package.json
+++ b/package.json
@@ -4,10 +4,18 @@
   "description": "Full-stack application with Audio, Form, and Stock pages",
   "private": true,
   "scripts": {
-    "dev": "cd frontend && npm run dev",
-    "build": "cd frontend && npm install && npm run build",
-    "install:all": "npm install && cd frontend && npm install",
-    "start": "cd frontend && npm run start"
+    "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
+    "dev:frontend": "cd frontend && npm run dev",
+    "dev:backend": "cd backend && npm run dev",
+    "build": "npm run build:frontend && npm run build:backend",
+    "build:frontend": "cd frontend && npm run build",
+    "build:backend": "cd backend && npm run build",
+    "install:all": "npm install && cd frontend && npm install && cd ../backend && npm install",
+    "start": "npm run start:backend",
+    "start:frontend": "cd frontend && npm run start",
+    "start:backend": "cd backend && npm start"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "concurrently": "^9.0.0"
+  }
 }
