--- a/backend/package.json
+++ b/backend/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "@fastify/cors": "^11.1.0",
     "@fastify/mongodb": "^9.0.0",
+    "@types/mongodb": "^4.0.6",
     "dotenv": "^17.2.3",
     "fastify": "^5.6.0",
     "fastify-plugin": "^5.0.0",
-    "pino-pretty": "^13.1.2"
+    "pino-pretty": "^13.1.2",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.0.0",
