--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@fastify/cors": "^11.1.0",
     "@fastify/mongodb": "^9.0.0",
+    "@polygon.io/client-js": "^8.2.0",
     "@types/mongodb": "^4.0.6",
     "dotenv": "^17.2.3",
     "fastify": "^5.6.0",
