--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,17 +13,21 @@
     "@nextui-org/react": "^2.6.11",
     "eslint-config-prettier": "^10.1.8",
     "framer-motion": "^12.23.22",
+    "lottie-react": "^2.4.0",
+    "@lottiefiles/dotlottie-web": "latest",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
     "prettier": "^3.6.2",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/ws": "^8.5.12",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
