--- a/backend/package.json
+++ b/backend/package.json
@@ -14,13 +14,16 @@
   "dependencies": {
     "@fastify/cors": "^11.1.0",
     "@fastify/mongodb": "^9.0.0",
+    "@fastify/websocket": "^11.0.0",
     "@polygon.io/client-js": "^8.2.0",
     "@types/mongodb": "^4.0.6",
     "dotenv": "^17.2.3",
     "fastify": "^5.6.0",
     "fastify-plugin": "^5.0.0",
+    "openai": "^4.67.3",
     "pino-pretty": "^13.1.2",
-    "zod": "^4.1.12"
+    "ws": "^8.18.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.0.0",
