--- a/backend/package.json
+++ b/backend/package.json
@@ -17,12 +17,13 @@
     "@fastify/websocket": "^11.0.0",
     "@polygon.io/client-js": "^8.2.0",
     "@types/mongodb": "^4.0.6",
+    "@types/ws": "^8.18.1",
     "dotenv": "^17.2.3",
     "fastify": "^5.6.0",
     "fastify-plugin": "^5.0.0",
     "openai": "^4.67.3",
     "pino-pretty": "^13.1.2",
-    "ws": "^8.18.0",
+    "ws": "^8.18.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
