--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "lint": "eslint src/**/*.ts",
-    "lint:fix": "eslint src/**/*.ts --fix"
+    "lint:fix": "eslint src/**/*.ts --fix",
+    "test:timezone": "tsx src/modules/stock/testTimezoneFix.ts"
   },
   "dependencies": {
     "@fastify/cors": "^11.1.0",
